# archiver

./: Cargo.toml  LICENSE  README.md  justfile
crates/archiver-cli/: Cargo.toml
crates/archiver-cli/src/: main.rs
crates/archiver-cli/tests/: cli_tests.rs
crates/archiver-core/: Cargo.toml
crates/archiver-core/src/: config.rs  error.rs  lib.rs  models.rs
crates/archiver-core/tests/: archive_process.rs  chaos_tests.rs  helpers.rs
crates/archiver-tui/: Cargo.toml
