[workspace]
resolver = "2"
members = ["crates/archiver-cli", "crates/archiver-core", "crates/archiver-tui"]


[workspace.dependencies]
git2 = "0.20.2"
walkdir = "2.5"
chrono = { version = "0.4", features = ["serde"] }
config = { version = "0.15.11", features = ["toml"] }
log = "0.4"
thiserror = "2.0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
ratatui = { version = "0.29.0" }
crossterm = { version = "0.29.0", features = ["event-stream"] }
tui-input = "0.12.1"
notify-rust = "4.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0.98"