[package]
name = "archiver-core"
version = "0.1.0"
edition = "2021"

[dependencies]
git2 = { workspace = true }
walkdir = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
directories = { workspace = true }

[dev-dependencies]
tempfile = "3.20.0"