[package]
name = "archiver-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "archiver-tui"
path = "src/main.rs"


[dependencies]
archiver-core = { path = "../archiver-core" }
ratatui = { workspace = true }
crossterm = { workspace = true }
tui-input = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }